<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".Activities.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="546dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/blur_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.399">

    </RelativeLayout>

    <Button
        android:id="@+id/btn_regist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Buat Akun"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_konfirmasi"
        app:layout_constraintVertical_bias="0.242" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:gravity="center"
        android:text="Registrasi Akun"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <EditText
        android:id="@+id/et_nama"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/stroke_button_white"
        android:hint="@string/nama"
        android:paddingLeft="12dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#BCBCBC"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/et_regist_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/stroke_button_white"
        android:hint="Email"
        android:paddingLeft="12dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#BCBCBC"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nama"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_notelp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/stroke_button_white"
        android:hint="@string/notelp"
        android:inputType="phone"
        android:paddingLeft="12dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#BCBCBC"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_regist_email"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_regist_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/stroke_button_white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="12dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#BCBCBC"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_notelp"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_konfirmasi"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/stroke_button_white"
        android:hint="Konfirmasi Kata Sandi"
        android:inputType="textPassword"
        android:paddingLeft="12dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#BCBCBC"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_regist_password"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>